<resources>
    <string name="app_name">Hacked?</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Account name or email address</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="action_add_account">Add account</string>
    <string name="snackbar_checking_account">Checking for breaches - the list will be updated with results soon</string>
    <string name="snackbar_max_accounts">You cannot add any more accounts. A maximum of 50 accounts can be added to the list.</string>
    <string name="notification_title_new_breaches_found">Found new breached accounts</string>
    <string name="notification_text_click_to_open">Tap here to see details</string>
    <string name="label_domain">Website:</string>
    <string name="label_breach_date">Breach date:</string>
...
