<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/account"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_padding"
        android:layout_marginLeft="@dimen/card_padding"
        android:layout_marginRight="@dimen/card_padding"
        android:layout_marginBottom="@dimen/card_padding"
        android:hint="@string/hint_name"/>

</LinearLayout>